--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "phpdocumentor/phpdocumentor": "2.5.*@dev",
-        "squizlabs/php_codesniffer": "1.*"
+        "phpdocumentor/phpdocumentor": "2.8.*",
+        "squizlabs/php_codesniffer": "2.3.*"
     },
     "autoload": {
         "psr-4": {
